--- a/priv/static/assets/style.css
+++ b/priv/static/assets/style.css
@@ -593,8 +593,8 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.-mt-1 {
-  margin-top: -0.25rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .ml-2 {
@@ -605,20 +605,12 @@ video {
   margin-top: 1rem;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .flex {
   display: flex;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.w-4 {
-  width: 1rem;
+.table {
+  display: table;
 }
 
 .items-center {
@@ -629,22 +621,17 @@ video {
   justify-content: space-between;
 }
 
-.rounded-full {
-  border-radius: 9999px;
+.border {
+  border-width: 1px;
 }
 
 .border-b {
   border-bottom-width: 1px;
 }
 
-.bg-emerald-300 {
+.bg-blue-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(110 231 183 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
 .p-4 {
@@ -653,6 +640,10 @@ video {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .font-mono {
@@ -669,9 +660,21 @@ video {
   line-height: 2rem;
 }
 
-.text-red-200 {
-  --tw-text-opacity: 1;
-  color: rgb(254 202 202 / var(--tw-text-opacity));
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+* {
+  font-family: "Times New Roman", Times, serif;
+}
+
+body {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 a {
@@ -695,4 +698,23 @@ a {
 .dot-nok {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.stats-table td[colspan="2"] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+  text-align: center;
+  font-weight: 700;
+  background-color: yellow;
+}
+
+.stats-table td {
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+  padding: 1rem;
+}
+
+.stats-table tr td:first-child {
+  font-weight: 700;
 }
