--- a/lib/homelab_mon_web/templates/layout/root.html.heex
+++ b/lib/homelab_mon_web/templates/layout/root.html.heex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "HomelabMon", suffix: " · Phoenix Framework" %>
+    <%= live_title_tag assigns[:page_title] || "HomelabMon", suffix:  " v#{Application.spec(:homelab_mon, :vsn)}"  %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/style.css")}/>
   </head>
   <body class="p-4">
