chore: bump versions

--- a/lib/homelab_mon_web/templates/layout/root.html.heex
+++ b/lib/homelab_mon_web/templates/layout/root.html.heex
@@ -15,7 +15,7 @@
       </h1>
       <nav>
         <ul class="flex">
-          <%= if @solar_edge["status"] == "Active" do %>
+          <%= if @solar_edge["status"] == "Active" && @solar_edge["isOutdated"] == true do %>
           <li class="flex items-center">
             SE 
             <span class="dot dot-ok ml-2 inline-block relative" style="top: 2px">&nbsp;</span>
